feat: redis -> mongoDB로 변경

--- a/apps/frontend/.prettierrc
+++ b/apps/frontend/.prettierrc
@@ -8,5 +8,7 @@
   "bracketSpacing": true,
   "arrowParens": "avoid",
   "useTabs": false,
-  "quoteProps": "as-needed"
+  "quoteProps": "as-needed",
+  "jsxSingleQuote": true,
+  "bracketSameLine": false
 } 
