--- a/apps/backend/env.example
+++ b/apps/backend/env.example
@@ -19,7 +19,7 @@ DB_RETRY_ATTEMPTS=10
 DB_RETRY_DELAY=3000
 
 # MongoDB Database (알림 시스템)
-MONGODB_URI=mongodb://taskflow:taskflow123@mongodb:27017/taskflow?authSource=taskflow
+MONGODB_URI=mongodb://admin:admin123@mongodb:27017/taskflow?authSource=admin
 MONGODB_MAX_POOL_SIZE=10
 MONGODB_SERVER_SELECTION_TIMEOUT=5000
 MONGODB_SOCKET_TIMEOUT=45000
@@ -34,7 +34,7 @@ ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
 # API Configuration
 API_PREFIX=api
 API_VERSION=1
-GLOBAL_PREFIX=api/v1
+GLOBAL_PREFIX=api
 
 # Logging Configuration
 LOG_LEVEL=debug
