--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
