--- a/apps/frontend/vercel.json
+++ b/apps/frontend/vercel.json
@@ -1,7 +1,10 @@
 {
+  "buildCommand": "npm install --legacy-peer-deps && npm run build",
   "functions": {
     "app/api/**/*.ts": {
-      "runtime": "nodejs22.x"
+      "runtime": "nodejs20.x"
     }
-  }
+  },
+  "installCommand": "npm install --legacy-peer-deps",
+  "framework": null
 }
