--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -1,12 +1,10 @@
 {
   "version": 2,
+  "name": "taskflow-backend",
   "builds": [
     {
       "src": "api/index.ts",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["dist/**"]
-      }
+      "use": "@vercel/node"
     }
   ],
   "routes": [
