--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -1,25 +1,15 @@
 {
   "version": 2,
-  "name": "taskflow-backend",
   "builds": [
     {
-      "src": "api/index.ts",
+      "src": "dist/main.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/index.ts"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/api/index.ts"
+      "dest": "dist/main.js"
     }
-  ],
-  "functions": {
-    "api/index.ts": {
-      "maxDuration": 30
-    }
-  }
+  ]
 }
