--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,8 @@ jspm_packages/
 .env
 .env.development.local
 .env.test.local
-.env.production.local
+.env.production
+env.example
 .env.local
 
 # parcel-bundler cache (https://parceljs.org/)
@@ -149,4 +150,4 @@ dist/
 coverage/
 
 # Docker
-.dockerignore 
+.dockerignore
