--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -1,41 +1,17 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
-  "name": "taskflow-backend",
   "builds": [
     {
-      "src": "src/main.ts",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["dist/**"]
-      }
+      "src": "apps/backend/api/index.ts",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/health",
-      "dest": "src/main.ts"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "src/main.ts"
-    },
-    {
       "src": "/(.*)",
-      "dest": "src/main.ts"
+      "dest": "apps/backend/api/index.ts"
     }
   ],
-  "env": {
-    "NODE_ENV": "production"
-  },
-  "build": {
-    "env": {
-      "NODE_ENV": "production"
-    }
-  },
-  "functions": {
-    "src/main.ts": {
-      "maxDuration": 30
-    }
-  }
+  "installCommand": "cd apps/backend && npm install",
+  "buildCommand": "cd apps/backend && npm run build"
 }
