feat; backend 전체 path 상대경로로 변경

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -17,14 +17,6 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "esModuleInterop": true,
-    "paths": {
-      "@/*": ["src/*"],
-      "@domain/*": ["src/domain/*"],
-      "@application/*": ["src/application/*"],
-      "@infrastructure/*": ["src/infrastructure/*"],
-      "@presentation/*": ["src/presentation/*"],
-      "@shared/*": ["src/shared/*"]
-    }
+    "esModuleInterop": true
   }
-} 
+}
