--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -12,6 +12,9 @@
       "dest": "api/index.ts"
     }
   ],
+  "env": {
+    "NODE_ENV": "production"
+  },
   "installCommand": "npm install",
   "buildCommand": "npm run build"
 }
